# music

./: .clang-format  .gitignore  CMakeLists.txt  array.c  array.h  audio_driver.h  design.md  fast_math.c  fast_math.h  instrument.c  instrument.h  main.c  music.c  music.h  pa.c  parser.c  parser.h  pulseaudio_driver.c  pulseaudio_driver.h  pw_driver.c  pw_driver.h  sequencer.c  sequencer.h  test.c  test.h
